<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.presenter.RegisterActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_account_wrapper_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_account">

            <AutoCompleteTextView
                android:id="@+id/register_account_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_wrapper_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password">

            <EditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_wrapper_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phone_wrapper_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/register_clean_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="7"
            android:background="@drawable/login_register_btn"
            android:text="@string/register_clean"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/register_register_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="7"
            android:background="@drawable/login_login_btn"
            android:text="@string/register_register"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>