<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/main_icon_iv"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ic_default_avatar"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <Button
            android:id="@+id/main_logout_btn"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/logout_btn_bg"
            android:text="@string/main_logout"
            android:textColor="#fff" />

    </RelativeLayout>

    <TextView
        android:id="@+id/main_nickname_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/drawer_header_username_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/main_tag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_header_tag_default" />

</LinearLayout>
